# IEP

FirstProject/: CMakeLists.txt
FirstProject/inc/: MathLibrary.h
FirstProject/src/: Functions.cpp  MainProject.cpp
lab8/: Makefile  food.c
laborator 10/: main.cpp
laborator 11/: main.cpp
laborator 9/: main.c
laborator4/: main.cpp
laborator5/: Main.cpp  main.cpp
laborator6/: main.cpp
laborator7/: laborator7.cpp
